# SignalSourceManager.Desktop.PyQt

./: .gitignore  README.md  appsettings.Development.json  appsettings.json  controls.qrc  gallery.resources.qrc  pyproject.toml  resources.qrc
gallery/: App.qml  constants.py  main.py  resources_rc.py
gallery/constants/: AppFont.py  AppInfo.py  AppTheme.py  __init__.py
gallery/models/: ItemsFooter.qml  ItemsOriginal.qml
gallery/pages/: ButtonPage.qml  ComboBoxPage.qml  HomePage.qml  TextBlockPage.qml
gallery/windows/: AboutWindow.qml  ControlsWindow.qml  CrashWindow.qml  DevWindow.qml  HotloadWindow.qml  MainWindow.qml  Object.qml  PageWindow.qml  SignInWindow.qml  SingleInstanceWindow.qml  SingleTaskWindow.qml  StandardWindow.qml
src/: App.qml  AppInfo.py  RouteManager.qml  WindowManager.qml  WindowService.qml  constants.py  controls_rc.py  dependency_injection.py  dev_tools.py  hosting.py  main.py  main.qml  resources.py  theme.py  view_models.py  views_rc.py
src/controls/: UploadHistoricalDataDialog.qml
src/controls/Dashboard/: Dashboard.qml
src/controls/LeftNavBar/: CurrentUser.qml  CurrentUserPopup.qml  LeftNavBar.qml  NavItem.qml
src/controls/LogConsole/: LogConsole.qml
src/controls/base/: Acrylic.qml  AppBar.qml  AppShell.qml  AppTitleBar.qml  AutoSuggestBox.qml  Background.qml  Badge.qml  Button.qml  Clip.qml  ComboBox.qml  ComponentLoader.qml  ContentDialog.qml  Control.qml  DataGrid.qml  Divider.qml  FluentAppTitleBar.qml  FluentAutoSuggestBox.qml  FluentCheckbox.qml  FluentCombobox.qml  FluentContentDialog.qml  FluentNavigationView.qml  FluentPasswordBox.qml  FluentTabView.qml  FluentTextBlock.qml  FluentTextBox.qml  FluentToggleSwitch.qml  FluentTreeView.qml  FluentWindow.qml  FocusRectangle.qml  Frame.qml  Icon.qml  InfoBar.qml  ItemDelegate.qml  ListView.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MenuSeparator.qml  NavigationView.qml  (+28 more)
src/controls/base/buttons/: FluentButton.qml  (+1 more)
src/resources/: ResourceOptions.py  __init__.py  contracts.py
src/services/: WindowManager.qml  WindowService.qml  __init__.py
src/view_models/: __init__.py
src/views/About/: About.qml
src/views/Home/: CreateSignalSourceDialog.qml  Home.qml
src/views/Settings/: Settings.qml
src/views/SignalSources/: SignalSources.qml
src/windows/: AboutWindow.qml  CrashWindow.qml  DevelopmentWindow.qml  HotkeyWindow.qml  HotloadWindow.qml  MainWindow.qml  PageWindow.qml  SignInWindow.qml  SignalSourceDetailsWindow.qml  SingleInstanceWindow.qml  SingleTaskWindow.qml  StandardWindow.qml
src/windows/demo/: ButtonsWindow.qml  PagesWindow.qml
src/windows/gallery/: GalleryMainWindow.qml  PageWindow.qml
