[project]
name = "signalsourcemanager-desktop-pyqt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mengsyue Amao Tsai", email = "mengsyue.tsai@outlook.com" }
]
dependencies = [
    "pyside6>=6.7.3",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.6.9",
]

[tool.rye.scripts]
start = "python ./src/main.py -e Production"
dev = "python ./src/main.py -e Development"

build = { cmd = ["rye", "run", "build_qrc"] }
build_qrc = "pyside6-rcc views.qrc -o ./src/views_rc.py"

lint = "ruff check ."
lintq = "pyside6-qmllint"
format = "ruff format ."
formatq = "pyside6-qmlformat"
