[project]
name = "signalsourcemanager-desktop-pyqt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mengsyue Amao Tsai", email = "mengsyue.tsai@outlook.com" }
]
dependencies = [
    "pyside6>=6.7.3",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.6.9",
]

[tool.rye.scripts]
start = "python ./src/main.py -e Production"
dev = "python ./src/main.py -e Development"

build = { chain = ["build:views", "build:controls"] }
"build:views" = "pyside6-rcc views.qrc -o ./src/views_rc.py"
"build:controls" = "pyside6-rcc controls.qrc -o ./src/controls_rc.py"

lint = { chain = ["lint:qml", "lint:ruff"] }
"lint:qml" = "pyside6-qmllint"
"lint:ruff" = "ruff check ."

format = { chain = ["format:ruff", "format:qml"] }
"format:ruff" = "ruff format ."
"format:qml" = "pyside6-qmlformat"
